# 414Ret

./: .gitignore  .luacheckrc  AGENTS.md  CLAUDE.md  README.md  changelog.md  codecov.yaml  mypy.ini  pyinstaller.spec  pyproject.toml  requirements.txt
client/: main.js  package-lock.json  package.json
docs/: 414th-community-announcement.md  414th-fly-with-us.md  414th-for-retribution-veterans.md  414th-red-tide-announcement.md  414th-what-we-built.md
game/: coalition.py  controlpoint_influenceradius.py  customkneeboard.py  debriefing.py  game.py  migrator.py  naming.py  persistency.py  pow_objectives.py  pow_recovery.py  procurement.py  scar_objectives.py  scar_rescue.py  sidc.py  sitrep.py  spatialindex.py  threatzones.py  transfers.py  unitmap.py  version.py
pydcs_extensions/: __init__.py
qt_ui/: dialogs.py  main.py  models.py  screenfit.py  uiconstants.py
scripts/: README.md  bootstrap-env.ps1  build-client.ps1  check-env.ps1  dcs_airfield_elevations.py  derive_airport_imagery_offsets.py  gen_land_relocate_test_mission.py  inspect_dtc_miz.py
tests/: test_aewc_targets.py  test_aircraft_engagement_escort_zone.py  test_aircraft_tasking_roles.py  test_airfield_directory_page.py  test_airspace_geometry.py  test_airwing_country_selector.py  test_armed_recon_planning.py  test_barcap_threat_weighting.py  test_bda_tarps_reveal.py  test_blankcampaign.py  test_blanktheater.py  test_briefing_page_atis.py  test_buy_menu_no_force_group.py  test_campaignairwingconfig_empty.py  test_carrier_comms.py  test_carrier_naming.py  test_carrier_recovery_stagger.py  test_culling.py  (+80 more)
(+1601 files in other folders)
